--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@meadown/use-is-scroll",
+  "name": "@meadown/useisscroll",
   "version": "1.0.0",
   "publishConfig": {
     "access": "public"
