--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "build:esm": "tsc --project tsconfig.esm.json",
     "clean": "rm -rf dist",
     "dev": "npm run build -- --watch",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "react",
@@ -57,7 +60,15 @@
     }
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/react": "^18"
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
+    "@types/react": "^18",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "react": "^19.2.2",
+    "react-dom": "^19.2.2",
+    "ts-jest": "^29.4.6",
+    "typescript": "^5"
   }
 }
