--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -7,5 +7,5 @@
     "declaration": false
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "**/*.test.*", "**/*.spec.*", "**/__tests__"]
 }
