--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -6,5 +6,5 @@
     "declaration": false
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "**/*.test.*", "**/*.spec.*", "**/__tests__"]
 }
